# hoverboard-sdl

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGES.md  CMakeLists.txt  COPYING.DATA  README.md  coins.cc  game.cc  game.hh  main.cc  map.cc  map.hh  passability.hh  tilecache.cc  tilecache.hh  tiles.cc  tiles.hh
.github/workflows/: ci.yml
data/: get.sh
misc/: hoverboard.desktop  hoverboard.desktop.in  hoverboard.rc
scripts/: extract-icon.sh  generate-minimap.sh  get.sh
src/: coins.cc  collision.hh  game.cc  game.hh  main.cc  tile.cc  tile.hh  tile_obstacle.cc  tile_visual.cc  tilecache.cc  tilecache.hh
